# nautilus-fetch

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  justfile
backend/: pyproject.toml
backend/src/: __init__.py  config.py  main.py  pacing.py  scheduler.py
backend/src/api/: catalog.py  instruments.py  jobs.py  routes.py  schedules.py  schemas.py  ws.py
backend/src/db/: engine.py  migrate.py  schema.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 0001_baseline.py
backend/src/db/repos/: chunks.py  instruments.py  jobs.py  samples.py  schedules.py
backend/src/engine/: barsize.py  convert.py  engine.py  planner.py  recorder.py  throughput.py  writer.py
backend/src/ib/: connection.py  errors.py  search.py  serialize.py  shim.py
backend/tests/: conftest.py  fake_ib.py  test_api.py  test_coexistence.py  test_engine.py  test_errors.py  test_ib_live.py  test_jobs_api.py  test_maintenance_api.py  test_migrations.py  test_pacing.py  test_planner.py  test_recorder.py  test_scheduler.py  test_search.py  test_ticks.py  test_writer_roundtrip.py
docker/: .dockerignore  Dockerfile
frontend/: .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts  enums.ts  keys.ts  mutations.ts  normalize.ts  queries.ts  types.ts
frontend/src/domain/: catalogView.test.ts  catalogView.ts  chunkMap.test.ts  chunkMap.ts  instrumentClass.ts  jobForm.test.ts  jobForm.ts  jobView.test.ts  jobView.ts  kind.ts  scheduleView.test.ts  scheduleView.ts  sessions.test.ts  sessions.ts  (+2 more)
(+75 files in other folders)
